--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,32 @@
 <h1>Listing businesses</h1>
 
-<table>
+<% @businesses.each_slice(3) do |businesses| %>
+  <div class="row">
+    <% businesses.each_with_index do |business,i| %>
+      <div class="business col-md-4">
+        <h2><%= business.name %></h2>
+        <p><img src="<%= business.image_url %>"></p>
+        <p>Neighborhoods: 
+          <% business.neighborhoods.each_with_index do |hood,i| %>
+            <%= hood.name %><% unless i == business.neighborhoods.count - 1 %>, <% end %>
+          <% end %>
+        </p>
+        <p>Categories: 
+          <% business.categories.each_with_index do |cat,i| %>
+            <%= cat.name %><% unless i == business.categories.count - 1 %>, <% end %>
+          <% end %>
+        </p>
+        <p>Phone: <%= business.phone %></p>
+        <p>URL: <a href="<%= business.url %>" target="_blank"><%= business.url %></a></p>
+        <p><%= link_to 'Show', business %></p>
+        <p><%= link_to 'Edit', edit_business_path(business) %></p>
+        <p><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div>
+    <% end %>
+  </div>
+<% end %>
+
+<!-- <table>
   <thead>
     <tr>
       <th>Name</th>
@@ -21,7 +47,7 @@
       <th>Country code</th>
       <th>Cross streets</th>
       <th>Is claimed</th>
-      <th>Parking types</th>
+      <th>Parking options</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -47,6 +73,11 @@
         <td><%= business.country_code %></td>
         <td><%= business.cross_streets %></td>
         <td><%= business.is_claimed %></td>
+        <td>
+          <% business.parking_options.each do |option| %>
+            <%= option.name %>,
+          <% end %>
+        </td>
         <td><%= link_to 'Show', business %></td>
         <td><%= link_to 'Edit', edit_business_path(business) %></td>
         <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -55,6 +86,8 @@
   </tbody>
 </table>
 
-<br>
+<br> -->
+
+<hr>
 
 <%= link_to 'New Business', new_business_path %>
