--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the index controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  font-family: 'Roboto', sans-serif;
+  padding-top: 50px;
+}
+
+a {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.wrapper {
+  padding: 25px 0;
+}
+
+.large-link {
+  font-size: 18px;
+  display: inline-block;
+  padding: 5px 8px;
+  border: 1px solid $gray-lighter;
+  margin: 0 10px 10px 0;
+
+  &:hover {
+    border-color: $gray-light;
+  }
+}
+
+#map {
+  width: 100%;
+  height: 600px;
+}
