--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,108 +1,113 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @business.name %>
-</p>
+<div id="map" class="single"></div>
 
-<p>
-  <strong>Parking options:</strong>
-  <% @business.parking_options.each do |option| %>
-    <%= option.name %>,
-  <% end %>
-</p>
+<div class="business-item" data-lat="<%= @business.lat %>" data-lng="<%= @business.lng %>">
+  <h4><%= @business.name %></h4>
 
-<p>
-  <strong>Neighborhoods:</strong>
-  <% @business.neighborhoods.each do |hood| %>
-    <%= hood.name %>,
-  <% end %>
-</p>
+  <p>
+    <strong>Parking options:</strong>
+    <% @business.parking_options.each do |option| %>
+      <%= option.name %>,
+    <% end %>
+  </p>
 
-<p>
-  <strong>Image url:</strong>
-  <img src="<%= @business.image_url %>">
-</p>
+  <p>
+    <strong>Neighborhoods:</strong>
+    <% @business.neighborhoods.each do |hood| %>
+      <%= hood.name %>,
+    <% end %>
+  </p>
 
-<p>
-  <strong>Url:</strong>
-  <%= @business.url %>
-</p>
+  <p>
+    <strong>Categories:</strong>
+    <% @business.categories.each do |cat| %>
+      <%= cat.name %>,
+    <% end %>
+  </p>
 
-<p>
-  <strong>Mobile url:</strong>
-  <%= @business.mobile_url %>
-</p>
+  <p>
+    <img src="<%= @business.image_url %>">
+  </p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @business.phone %>
-</p>
+  <p>
+    <%= link_to @business.url, @business.url %>
+  </p>
 
-<p>
-  <strong>Display phone:</strong>
-  <%= @business.display_phone %>
-</p>
+  <!-- <p>
+    <%= @business.mobile_url %>
+  </p> -->
 
-<p>
-  <strong>Review count:</strong>
-  <%= @business.review_count %>
-</p>
+  <p>
+    <strong>Phone:</strong>
+    <%= @business.phone %>
+  </p>
 
-<p>
-  <strong>Rating:</strong>
-  <%= @business.rating %>
-</p>
+  <p>
+    <strong>Display phone:</strong>
+    <%= @business.display_phone %>
+  </p>
 
-<p>
-  <strong>Rating img url large:</strong>
-  <%= @business.rating_img_url_large %>
-</p>
+  <p>
+    <strong>Review count:</strong>
+    <%= @business.review_count %>
+  </p>
 
-<p>
-  <strong>Snippet text:</strong>
-  <%= @business.snippet_text %>
-</p>
+  <p>
+    <strong>Rating:</strong>
+    <%= @business.rating %>
+  </p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @business.address %>
-</p>
+  <p>
+    <strong>Rating img url large:</strong>
+    <%= @business.rating_img_url_large %>
+  </p>
 
-<p>
-  <strong>Display address:</strong>
-  <%= @business.display_address %>
-</p>
+  <p>
+    <strong>Snippet text:</strong>
+    <%= @business.snippet_text %>
+  </p>
 
-<p>
-  <strong>City:</strong>
-  <%= @business.city %>
-</p>
+  <p>
+    <strong>Address:</strong>
+    <%= @business.address %>
+  </p>
 
-<p>
-  <strong>State code:</strong>
-  <%= @business.state_code %>
-</p>
+  <p>
+    <strong>Display address:</strong>
+    <%= @business.display_address %>
+  </p>
 
-<p>
-  <strong>Postal code:</strong>
-  <%= @business.postal_code %>
-</p>
+  <p>
+    <strong>City:</strong>
+    <%= @business.city %>
+  </p>
 
-<p>
-  <strong>Country code:</strong>
-  <%= @business.country_code %>
-</p>
+  <p>
+    <strong>State code:</strong>
+    <%= @business.state_code %>
+  </p>
 
-<p>
-  <strong>Cross streets:</strong>
-  <%= @business.cross_streets %>
-</p>
+  <p>
+    <strong>Postal code:</strong>
+    <%= @business.postal_code %>
+  </p>
 
-<p>
-  <strong>Is claimed:</strong>
-  <%= @business.is_claimed %>
-</p>
+  <p>
+    <strong>Country code:</strong>
+    <%= @business.country_code %>
+  </p>
 
-<%= link_to 'Edit', edit_business_path(@business) %> |
-<%= link_to 'Back', businesses_path %>
+  <p>
+    <strong>Cross streets:</strong>
+    <%= @business.cross_streets %>
+  </p>
+
+  <p>
+    <strong>Is claimed:</strong>
+    <%= @business.is_claimed %>
+  </p>
+
+  <%= link_to 'Edit', edit_business_path(@business) %> |
+  <%= link_to 'Back', businesses_path %>
+</div>
