--- a/app/views/businesses/neighborhood.html.erb
+++ b/app/views/businesses/neighborhood.html.erb
@@ -1,6 +1,6 @@
 <h4>Neighborhood</h4>
 <h2><%= @name %></h2>
-<h6><%= @businesses.count %> businesses</h6>
+<h6><%= page_entries_info @businesses %></h6>
 
 <div id="map"></div>
 
@@ -13,3 +13,5 @@
   </div>
   <% end %>
 </div>
+
+<%= will_paginate @businesses %>
