Added parking type filters

--- a/app/views/businesses/category.html.erb
+++ b/app/views/businesses/category.html.erb
@@ -2,6 +2,8 @@
 <h2><%= @name %></h2>
 <h6><%= page_entries_info @businesses %></h6>
 
+<h4>Filter by parking type: <a href="/businesses/category/<%= @name %>">All</a> / <% @options.each do |option| %><a href="?parking_type=<%= option.name.parameterize %>"><%= option.name %></a> / <% end %></h4>
+
 <div id="map"></div>
 
 <div class="listing" data-zoom="12">
